fix: header align moved to center

--- a/src/Components/About/About.css
+++ b/src/Components/About/About.css
@@ -15,6 +15,7 @@
     color: #151418;
     font-weight: 700;
     margin-bottom: 1.8rem;
+    text-align: center;
 }
 
 .about-card{
